testdata/baselines/reference/submodule/conformance/typeTagNoErasure.errors.txt
typeTagNoErasure.js(3,12): error TS2304: Cannot find name 'Test'.


==== typeTagNoErasure.js (1 errors) ====
    /** @template T @typedef {<T1 extends T>(data: T1) => T1} Test */
    
    /** @type {Test<number>} */
               ~~~~
!!! error TS2304: Cannot find name 'Test'.
    const test = dibbity => dibbity
    
    test(1) // ok, T=1
    test('hi') // error, T=number
    